Design/Parachute Deployement System/.metadata/.plugins/org.eclipse.cdt.ui/ParasuitDeploy.build.log
14:21:51 **** Incremental Build of configuration Debug for project ParasuitDeploy ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:44:1: error: unknown type name 'I2C_HandleTypeDef'; did you mean 'DMA_HandleTypeDef'?
   44 | I2C_HandleTypeDef hi2c1;
      | ^~~~~~~~~~~~~~~~~
      | DMA_HandleTypeDef
../Core/Src/main.c: In function 'MPU6050_Init':
../Core/Src/main.c:92:2: warning: implicit declaration of function 'HAL_I2C_Mem_Read' [-Wimplicit-function-declaration]
   92 |  HAL_I2C_Mem_Read (&hi2c1, MPU6050_ADDR,WHO_AM_I_REG,1, &check, 1, 1000);
      |  ^~~~~~~~~~~~~~~~
../Core/Src/main.c:98:3: warning: implicit declaration of function 'HAL_I2C_Mem_Write' [-Wimplicit-function-declaration]
   98 |   HAL_I2C_Mem_Write(&hi2c1, MPU6050_ADDR, PWR_MGMT_1_REG, 1,&Data, 1, 1000);
      |   ^~~~~~~~~~~~~~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:234:11: warning: implicit declaration of function 'pow' [-Wimplicit-function-declaration]
  234 |    Avg1 = pow(pow(Ax,2)+pow(Ay,2)+pow(Az,2),0.5);
      |           ^~~
../Core/Src/main.c:234:11: warning: incompatible implicit declaration of built-in function 'pow'
../Core/Src/main.c:22:1: note: include '<math.h>' or provide a declaration of 'pow'
   21 | #include "main.h"
  +++ |+#include <math.h>
   22 | 
../Core/Src/main.c: In function 'MX_I2C1_Init':
../Core/Src/main.c:317:8: error: request for member 'Instance' in something not a structure or union
  317 |   hi2c1.Instance = I2C1;
      |        ^
../Core/Src/main.c:318:8: error: request for member 'Init' in something not a structure or union
  318 |   hi2c1.Init.ClockSpeed = 100000;
      |        ^
../Core/Src/main.c:319:8: error: request for member 'Init' in something not a structure or union
  319 |   hi2c1.Init.DutyCycle = I2C_DUTYCYCLE_2;
      |        ^
../Core/Src/main.c:319:26: error: 'I2C_DUTYCYCLE_2' undeclared (first use in this function)
  319 |   hi2c1.Init.DutyCycle = I2C_DUTYCYCLE_2;
      |                          ^~~~~~~~~~~~~~~
../Core/Src/main.c:319:26: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:320:8: error: request for member 'Init' in something not a structure or union
  320 |   hi2c1.Init.OwnAddress1 = 0;
      |        ^
../Core/Src/main.c:321:8: error: request for member 'Init' in something not a structure or union
  321 |   hi2c1.Init.AddressingMode = I2C_ADDRESSINGMODE_7BIT;
      |        ^
../Core/Src/main.c:321:31: error: 'I2C_ADDRESSINGMODE_7BIT' undeclared (first use in this function)
  321 |   hi2c1.Init.AddressingMode = I2C_ADDRESSINGMODE_7BIT;
      |                               ^~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:322:8: error: request for member 'Init' in something not a structure or union
  322 |   hi2c1.Init.DualAddressMode = I2C_DUALADDRESS_DISABLE;
      |        ^
../Core/Src/main.c:322:32: error: 'I2C_DUALADDRESS_DISABLE' undeclared (first use in this function); did you mean 'I2C_DUALADDRESS_DISABLED'?
  322 |   hi2c1.Init.DualAddressMode = I2C_DUALADDRESS_DISABLE;
      |                                ^~~~~~~~~~~~~~~~~~~~~~~
      |                                I2C_DUALADDRESS_DISABLED
../Core/Src/main.c:323:8: error: request for member 'Init' in something not a structure or union
  323 |   hi2c1.Init.OwnAddress2 = 0;
      |        ^
../Core/Src/main.c:324:8: error: request for member 'Init' in something not a structure or union
  324 |   hi2c1.Init.GeneralCallMode = I2C_GENERALCALL_DISABLE;
      |        ^
../Core/Src/main.c:324:32: error: 'I2C_GENERALCALL_DISABLE' undeclared (first use in this function); did you mean 'I2C_GENERALCALL_DISABLED'?
  324 |   hi2c1.Init.GeneralCallMode = I2C_GENERALCALL_DISABLE;
      |                                ^~~~~~~~~~~~~~~~~~~~~~~
      |                                I2C_GENERALCALL_DISABLED
../Core/Src/main.c:325:8: error: request for member 'Init' in something not a structure or union
  325 |   hi2c1.Init.NoStretchMode = I2C_NOSTRETCH_DISABLE;
      |        ^
../Core/Src/main.c:325:30: error: 'I2C_NOSTRETCH_DISABLE' undeclared (first use in this function); did you mean 'I2C_NOSTRETCH_DISABLED'?
  325 |   hi2c1.Init.NoStretchMode = I2C_NOSTRETCH_DISABLE;
      |                              ^~~~~~~~~~~~~~~~~~~~~
      |                              I2C_NOSTRETCH_DISABLED
../Core/Src/main.c:326:7: warning: implicit declaration of function 'HAL_I2C_Init'; did you mean 'HAL_DMA_Init'? [-Wimplicit-function-declaration]
  326 |   if (HAL_I2C_Init(&hi2c1) != HAL_OK)
      |       ^~~~~~~~~~~~
      |       HAL_DMA_Init
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

14:21:51 Build Failed. 16 errors, 5 warnings. (took 282ms)

